[gd_scene load_steps=12 format=3 uid="uid://bf3k02fdggn06"]

[ext_resource type="Script" path="res://Objects/PoweredDoor/powered_door.gd" id="1_fovir"]
[ext_resource type="PackedScene" uid="uid://do3lt61x3sp61" path="res://Objects/FloatAwayText/float_away_text.tscn" id="2_jvfff"]
[ext_resource type="PackedScene" uid="uid://xnd8ne8fypg3" path="res://Components/FloatAwayTextSpawner/float_away_text_spawner.tscn" id="5_jv5mv"]
[ext_resource type="PackedScene" uid="uid://b7qfrcuaghpqn" path="res://Components/InteractionArea/InventoryRequirementInteractionArea/inventory_requirement_interaction_area.tscn" id="5_vndo1"]
[ext_resource type="Script" path="res://Resources/inventory_requirement.gd" id="6_a3l5x"]

[sub_resource type="Animation" id="Animation_q4c1c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xt0eq"]
resource_name = "SlideDoorUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1k4jk"]
_data = {
"RESET": SubResource("Animation_q4c1c"),
"SlideDoorUp": SubResource("Animation_xt0eq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nt0i"]
size = Vector2(16, 64)

[sub_resource type="Resource" id="Resource_lt2pt"]
script = ExtResource("6_a3l5x")
batteries_cost = 1
costs_items = Array[Resource("res://Resources/item.gd")]([])
requires_items = Array[Resource("res://Resources/item.gd")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ipeb"]
size = Vector2(112, 64)

[node name="PoweredDoor" type="Node2D"]
script = ExtResource("1_fovir")
float_away_text_packed_scene = ExtResource("2_jvfff")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1k4jk")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_right = 16.0
offset_bottom = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 32)
shape = SubResource("RectangleShape2D_1nt0i")

[node name="FloatAwayTextSpawner" parent="." instance=ExtResource("5_jv5mv")]
position = Vector2(32, 20)
text = "Requires 1 Battery"

[node name="InventoryRequirementInteractionArea" parent="." instance=ExtResource("5_vndo1")]
position = Vector2(8, 32)
inventory_requirement = SubResource("Resource_lt2pt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryRequirementInteractionArea"]
shape = SubResource("RectangleShape2D_4ipeb")

[connection signal="insufficient_requirements" from="InventoryRequirementInteractionArea" to="." method="_on_inventory_requirement_interaction_area_insufficient_requirements"]
[connection signal="requirements_met" from="InventoryRequirementInteractionArea" to="." method="_on_inventory_requirement_interaction_area_requirements_met"]
